--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -16,12 +16,12 @@
     <div ng-repeat="alert in alerts">
         <div class="notificationMessage"
              ng-class="alert.type=='success' ? 'success-example' : alert.type=='error' ? 'failure-example' : ''"
-        >
+        ng-bind="alert.msg">
             <i class="icon-remove" ng-click="closeAlert(alert)" ng-hide="alert.type=='processing'"></i>
             <i class="icon-spinner icon-spin" ng-show="alert.type=='processing'"></i>
             <i class="icon-ok" ng-show="alert.type=='success'"></i>
             <i class="icon-warning-sign" ng-show="alert.type=='error'"></i>
-            {{alert.msg}}
+           
         </div>
     </div>
 </div>
@@ -113,7 +113,7 @@
                 <ul class="nav nav-pills nav-stacked">
                     <li id="site_{{site.site_id}}" class="page-actions" ng-class="selectedSite.site_id == site.site_id ? 'active' : ''" >
                             <a class="delete-site" ng-click="deleteSite(site,sites)"><i class="icon-trash" ></i></a>
-                            <a ng-click="selectSite(site)" class="btn btn-primary">
+                            <a ng-click="selectSite(site)">
                                 <h4 ng-bind="selectedSite.friendly_name" class="media-heading"></h4>
                                 <small ng-bind-template="{{site.city}}, {{site.state}} {{site.zip}}"></small>
                             </a>
