Fix refresh button. Fix what users are shown on network

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="main-sidebar" ng-controller="MainMenuController">
-            <div sng-controller="RefreshDataController" style="position: relative; width: 100%;">
+            <div ng-controller="RefreshDataController" style="position: relative; width: 100%;">
                 <h2 style="margin-left: 10px; float: left; font-size:27px; margin-bottom: 0px;">LOCATIONS</h2>
                 <div ng-click="refreshData()" style="text-align: right; padding-top: 20px; padding-right: 10px;"><big><i class="icon-refresh" ng-click="refreshData()"></i></big></div>
             </div>
