[US4063] - Login issues fixed, ui fixes

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -201,5 +201,6 @@
     <script src="js/controllers/NewSiteController.js"></script>
     <script src="js/controllers/SiteController.js"></script>
     <script src="js/controllers/ErrorController.js"></script>
+    <script src="js/controllers/PortalApiController.js"></script>
 </body>
 </html>
