--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -74,7 +74,7 @@
                     <li>
                         <div class="title"><i class="icon-signal"></i>WiFi</div>
                     </li>
-                    <li class="brand" ng-bind="selectedSite.friendly_name" style="width:450px; text-align:left" ng-show="sites"></li>
+                    <li class="brand" ng-bind="selectedSite.friendly_name" style="width:30%; text-align:left" ng-show="sites"></li>
                     <li class="dropdown" ng-class="isActive('Settings')" ng-show="sites" style="float:right"><a ng-click="navigate('settings')" data-toggle="dropdown">Location Settings</a>
                     </li>
                     <li class="dropdown" ng-class="isActive('Users')" ng-show="sites" style="float:right"><a ng-click="navigate('users')" data-toggle="dropdown">Connected User Devices</a>
