Alter signal icons to wifi icons. Fix device refresh to not show duplicates.

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -72,7 +72,7 @@
                     <li><a style="padding: 8px; font-size:23px;" ng-click="returnHome()"><i class="icon-home"></i></a>
                     </li>
                     <li>
-                        <div class="title"><i class="icon-signal"></i>WiFi</div>
+                        <div class="title"><i style="position: relative; top:-3px" class="icon-rss rotate-45-left"></i>WiFi</div>
                     </li>
                     <li class="brand" ng-bind="selectedSite.friendly_name" style="width:30%; text-align:left" ng-show="sites"></li>
                     <li class="dropdown" ng-class="isActive('Settings')" ng-show="sites" style="float:right"><a ng-click="navigate('settings')" data-toggle="dropdown">Location Settings</a>
