--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -4,12 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="//use.typekit.net/weu0tnb.js"></script>
-    <script type="text/javascript">
-    try {
-        Typekit.load();
-    } catch (e) {}
-    </script>
+    <script type="text/javascript" src="//use.typekit.net/yre6wat.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <title>WiFi Management- Jive</title>
     <link rel="stylesheet" href="lib/select2/select2.css">
     <link rel="stylesheet" href="css/jive.css">
@@ -75,11 +71,11 @@
                         <div class="title"><i style="position: relative; top:-3px" class="icon-rss rotate-45-left"></i>WiFi</div>
                     </li>
                     <li class="brand" ng-bind="selectedSite.friendly_name" style="width:30%; text-align:left" ng-show="sites"></li>
-                    <li class="dropdown" ng-class="isActive('Settings')" ng-show="sites" style="float:right"><a ng-click="navigate('settings')" data-toggle="dropdown">Location Settings</a>
+                    <li class="dropdown" ng-class="isActive('Settings')" ng-show="sites" style="float:right"><a ng-click="navigate('settings')" data-toggle="dropdown">Account Settings</a>
                     </li>
                     <li class="dropdown" ng-class="isActive('Users')" ng-show="sites" style="float:right"><a ng-click="navigate('users')" data-toggle="dropdown">Connected User Devices</a>
                     </li>
-                    <li class="dropdown" ng-class="isActive('Devices')" ng-show="sites" style="float:right"><a ng-click="navigate('devices')" data-toggle="dropdown">Access Points</a>
+                    <li class="dropdown" ng-class="isActive('Devices')" ng-show="sites" style="float:right"><a ng-click="navigate('devices')" data-toggle="dropdown">Access Points(AP)</a>
                     </li>
                     <li class="dropdown" ng-class="isActive('Networks')" ng-show="sites" style="float:right"><a ng-click="navigate('networks')" data-toggle="dropdown">Wireless Networks</a>
                     </li>
@@ -97,7 +93,7 @@
         </div>
         <div class="main-sidebar" ng-controller="MainMenuController">
             <div ng-controller="RefreshDataController" style="position: relative; width: 100%;">
-                <h2 style="margin-left: 10px; float: left; font-size:27px; margin-bottom: 0px;">LOCATIONS</h2>
+                <h2 style="margin-left: 10px; float: left; font-size:27px; margin-bottom: 0px;">AP GROUPS</h2>
                 <div style="text-align: right; padding-top: 20px; padding-right: 10px;">
                     <big><i class="icon-refresh" ng-click="refreshData()"></i>
                     </big>
@@ -106,7 +102,7 @@
             <div class="no-select">
                 <a href="#/newsite" class="btn btn-primary" style="width: 85.5%; position: relative; margin: 0 5px 5px 5px">
                     <i class="icon-plus"></i>
-                    Add Location</a>
+                    Add AP Group</a>
                 <input ng-model="siteFilter" ng-click="cancel($event)" ng-focus="cancel($event)" ng-change="filter()" type="text" placeholder="Search by name" class="search input-xs ng-pristine ng-valid" style="width: 90%; border: 1px solid lightgrey; margin: 0 5px 5px 5px;">
                 <div style="border-top: 1px solid lightgrey; border-bottom: 1px solid lightgrey; padding-left: 5px;">
                     Sort By:
